Changed awful title

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   <body>
     <nav>
       <span>
-        Martin's Fishy Fabulous Floppy Friends
+        Martin's Fish
       </span>
       <a class="nav__link" href="/">My Fish</a>
       <a class="nav__link" href="locations.html">Locations</a>
