--- a/index.html
+++ b/index.html
@@ -162,6 +162,8 @@
                 <p>Clean your tank every two weeks.</p>
             </div>
             <div class="tip">
+              <!-- Trigger/Open The Modal -->
+
                 <h4>The Right Fish Together</h4>
                 <!-- description -->
                 <p>Don't put prey with predator.</p>
