dynamic'd the shit out of it

--- a/locations.html
+++ b/locations.html
@@ -25,38 +25,11 @@
           
       </section>
       <!-- Locations -->
-      <article  class = "location">
-        <section class = "location__card">
-          <p>City,Country</p>
-          <p>Longitude,Latitude</p>
-        </section>
-         <section class = "location__card">
-          <p>City,Country</p>
-          <p>Longitude,Latitude</p>
-        </section>
-        <section class = "location__card">
-          <p>City,Country</p>
-          <p>Longitude,Latitude</p>
-        </section>
-        <section class = "location__card">
-          <p>City,Country</p>
-          <p>Longitude,Latitude</p>
-        </section>
-        <section class = "location__card">
-          <p>City,Country</p>
-          <p>Longitude,Latitude</p>
-        </section>
-      </article>
+      <section class="locations">
+      <section  class = "locationCard"></section>
+    </section>
       </div>
-        <!-- <img class = "world" id = "worldMap" src="Bruce.jpeg"world map"> -->
-      <!-- <script>
-        function myHide(){
-          document.getElementById("worldMap").hidden = true;
-        }
-        // function myAppear(){
-        //   document.getElementById("worldMap").hidden = false;
-        // }
-      </script> -->
-
+      
+      <script type="module" src="./scripts/locations/mainLocations.js"></script>
 </body>
 </html>
